# rawhttp

./: .gitignore  Cargo.toml  LICENSE  README.md  test_handlers.sh
.github/workflows/: rust.yml
src/: main.rs  server.rs
src/http/: body.rs  header.rs  method.rs  mod.rs  query.rs  request.rs  request_line.rs  response.rs  status_code.rs
src/server/: tcp.rs
tests/: request_smuggling.rs
